# datafinder

./: pyproject.toml
src/datafinder/: __init__.py  datafinder.py
tests/: test_datafinder.py
