[project]
name = "datafinder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SteffenPL", email = "steffen.plunder@web.de" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.1",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
